--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral() // jcenter() works as well because it pulls from Maven Central
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
